<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0CFB1">


    <View
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="My Checkout"
        android:textColor="#FFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:text="3 Items"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/ScrollView"
        android:background="#F0CFB1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SubTitle"
        app:layout_constraintBottom_toTopOf="@id/linearLayout2"
        >


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bgitems"
        android:paddingVertical="5dp"
        android:orientation="vertical">

            <view class="androidx.recyclerview.widget.RecyclerView"
                android:id="@+id/recycler_view"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/confirmBtn">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical"
            android:gravity="end">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/priceSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="Subtotal:"
                    android:textColor="#BEBEBE"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/priceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$ 14.65"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <TextView
                    android:id="@+id/discountSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="Discount:"
                    android:textColor="#BEBEBE"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/discountTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-$ 1.50"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <TextView
                    android:id="@+id/taxSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="Tax:"
                    android:textColor="#BEBEBE"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/taxTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$ 1.47"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="100dp"
                android:layout_height="4dp"
                android:layout_weight="2"
                android:layout_marginVertical="8dp"
                android:backgroundTint="@android:color/darker_gray"
                android:background="@drawable/bgborder" />

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <TextView
                    android:id="@+id/totalSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="Total:"
                    android:textColor="#BEBEBE"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/totalTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$ 14.62"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bgborder" />


    </LinearLayout>

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bgbtncheckpromo"
        android:text="Complete Checkout"
        android:textAllCaps="false"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>